# telegram-image-generator

./: .env.example  .gitignore  README.md  docker-compose.yml
Backend/: README.md
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 098965724109_create_users_table.py  0aaf30d66bb3_add_credit_transaction_sequence_id.py  30235fc7cf43_add_asset_fields_to_generation_images.py  8eb702988fcd_cleanup_miniapp_database_schema.py  96f59ed2ba52_add_payment_provider_fields.py  a81025a9fd99_create_main_tables.py  c020d32c6e3b_add_relationships.py
backend/app/: main.py
backend/app/ai/: base.py  model_catalog.py  registry.py
backend/app/ai/adapters/: nanobanano.py  veo.py
backend/app/api/: deps.py
backend/app/api/routes/: admin.py  ai_models.py  balance.py  credits.py  generations.py  purchases.py  users.py
backend/app/auth/: telegram_init_data.py
backend/app/bot/: dispatcher.py  keyboards.py  main.py
backend/app/bot/handlers/: help.py  start.py
backend/app/core/: config.py  database.py
backend/app/db/models/: __init__.py  audit_log.py  credit_transaction.py  generation.py  generation_image.py  processed_update.py  purchase.py  user.py  user_session.py
backend/app/payments/: base.py  catalog.py  registry.py
backend/app/queue/: generation.py  redis.py
backend/app/repositories/: audit_logs.py  credits.py  generation_images.py  generations.py  processed_updates.py  purchases.py  user_sessions.py  users.py
backend/app/schemas/: ai_models.py  credits.py  generations.py  purchases.py  users.py
backend/app/services/: ai_execution.py  audit_logs.py  credits.py  exceptions.py  generations.py  processed_updates.py  purchases.py  sessions.py  users.py
backend/app/storage/: gcs.py  local.py
backend/app/workers/: generation.py
backend/tests/: conftest.py
backend/tests/integration/: test_generation_service.py  test_purchase_service.py  test_user_service.py
backend/tests/unit/: test_model_catalog.py  test_payment_catalog.py
(+60 files in other folders)
