[project]
name = "telegram-image-generator-backend"
version = "0.1.0"
description = "Backend for Telegram image generator"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg[binary]>=3.2.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.4.0",
    "python-multipart>=0.0.9",
    "redis>=5.0.0",
    "rq>=1.16.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"