[project]
name = "telegram-image-generator-backend"
version = "0.1.0"
description = "Backend for Telegram image generator"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.13.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg[binary]>=3.2.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.4.0",
    "python-multipart>=0.0.9",
    "redis>=5.0.0",
    "arq>=0.28.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "google-genai>=1.51.0",
    "google-cloud-storage>=2.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
markers = [
    "unit: fast tests without external services",
    "integration: tests with local database/redis/api",
    "external: tests that call real external providers",
]